Added explanatory text

--- a/viz/css/main.css
+++ b/viz/css/main.css
@@ -24,10 +24,10 @@
 
 #myInput:focus {outline: 3px solid #ddd;}
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
+/* .dropdown { */
+/*   position: relative; */
+/*   display: inline-block; */
+/* } */
 
 #dropDownDiv {
   vertical-align:middle;
