--- a/viz/css/main.css
+++ b/viz/css/main.css
@@ -77,3 +77,9 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.centered {
+  position: fixed; /* or absolute */
+  top: 50%;
+  left: 50%;
+}
